--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Shahid Chaudhary",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.22",
     "morgan": "^1.10.0",
     "slugify": "^1.6.6",
