--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ PORT=3000
 DATABASE=mongodb+srv://ShahidCh119:<PASSWORD>@cluster0.fjch8jt.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=vAbzhol7rpj8Y1Oy
+
+JWT_SECRET=my-Natours-app-works-like-pro-etc
+JWT_EXPIRES_IN=90d
