--- a/config.env
+++ b/config.env
@@ -6,3 +6,8 @@ DATABASE_PASSWORD=vAbzhol7rpj8Y1Oy
 
 JWT_SECRET=my-Natours-app-works-like-pro-etc
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=4dcb3c772bfb3c
+EMAIL_PASSWORD=a42af9363863ba
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
