add rateLimiter features using rate limit npm package

--- a/config.env
+++ b/config.env
@@ -6,6 +6,7 @@ DATABASE_PASSWORD=vAbzhol7rpj8Y1Oy
 
 JWT_SECRET=my-Natours-app-works-like-pro-etc
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME="8e1c9c578ba51e"
 EMAIL_PASSWORD="e973a702c178e4"
